--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "createStartMenuShortcut": true,
       "shortcutName": "FixIT",
       "uninstallDisplayName": "FixIT",
-      "artifactName": "FixIT-Setup-${version}.${ext}"
+      "artifactName": "FixIT.Setup.${version}.${ext}"
     },
     "asar": true,
     "asarUnpack": [
