--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helpit",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "HelpIT Application",
   "main": "main.js",
   "scripts": {
@@ -28,6 +28,10 @@
           "**/*.bat",
           "**/*.exe"
         ]
+      },
+      {
+        "from": "resources/.env",
+        "to": ".env"
       }
     ],
     "win": {
@@ -52,6 +56,7 @@
     ]
   },
   "dependencies": {
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "dotenv": "^16.4.1"
   }
 }
